Add jwt token authentication
